tests/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: DenyClusterIssuer
metadata:
  name: deny-cluster-issuer
spec:
  match:
    kinds:
      - apiGroups: ["cert-manager.io"]
        kinds: ["Certificate"]
  parameters:
    message: gatekeeper
