tests/dumminput.json
{
    "dryRun": false,
    "kind": {
        "group": "cert-manager.io",
        "kind": "Certificate",
        "version": "v1"
    },
    "name": "my-selfsigned-ca",
    "namespace": "default",
    "object": {
        "apiVersion": "cert-manager.io/v1",
        "kind": "Certificate",
        "metadata": {
            "annotations": {
                "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"cert-manager.io/v1\",\"kind\":\"Certificate\",\"metadata\":{\"annotations\":{},\"name\":\"my-selfsigned-ca\",\"namespace\":\"default\"},\"spec\":{\"commonName\":\"my-selfsigned-ca\",\"isCA\":true,\"issuerRef\":{\"group\":\"cert-manager.io\",\"kind\":\"ClusterIssuer\",\"name\":\"selfsigned-cluster-issuer2\"},\"privateKey\":{\"algorithm\":\"ECDSA\",\"size\":256},\"secretName\":\"root-secret\"}}\n"
            },
            "creationTimestamp": "2023-11-14T07:35:36Z",
            "generation": 1,
            "managedFields": [
                {
                    "apiVersion": "cert-manager.io/v1",
                    "fieldsType": "FieldsV1",
                    "fieldsV1": {
                        "f:metadata": {
                            "f:annotations": {
                                ".": {},
                                "f:kubectl.kubernetes.io/last-applied-configuration": {}
                            }
                        },
                        "f:spec": {
                            ".": {},
                            "f:commonName": {},
                            "f:isCA": {},
                            "f:issuerRef": {
                                ".": {},
                                "f:group": {},
                                "f:kind": {},
                                "f:name": {}
                            },
                            "f:privateKey": {
                                ".": {},
                                "f:algorithm": {},
                                "f:size": {}
                            },
                            "f:secretName": {}
                        }
                    },
                    "manager": "kubectl-client-side-apply",
                    "operation": "Update",
                    "time": "2023-11-14T07:35:36Z"
                }
            ],
            "name": "my-selfsigned-ca",
            "namespace": "default",
            "uid": "8df64dd4-00dc-459f-9be5-36f659ba7622"
        },
        "spec": {
            "commonName": "my-selfsigned-ca",
            "isCA": true,
            "issuerRef": {
                "group": "cert-manager.io",
                "kind": "ClusterIssuer",
                "name": "selfsigned-cluster-issuer2"
            },
            "privateKey": {
                "algorithm": "ECDSA",
                "size": 256
            },
            "secretName": "root-secret"
        }
    },
    "oldObject": null,
    "operation": "CREATE",
    "options": {
        "apiVersion": "meta.k8s.io/v1",
        "fieldManager": "kubectl-client-side-apply",
        "fieldValidation": "Strict",
        "kind": "CreateOptions"
    },
    "requestKind": {
        "group": "cert-manager.io",
        "kind": "Certificate",
        "version": "v1"
    },
    "requestResource": {
        "group": "cert-manager.io",
        "resource": "certificates",
        "version": "v1"
    },
    "resource": {
        "group": "cert-manager.io",
        "resource": "certificates",
        "version": "v1"
    },
    "uid": "73b209b3-279b-4e11-9792-6e61a77d4455",
    "userInfo": {
        "groups": [
            "system:masters",
            "system:authenticated"
        ],
        "username": "masterclient"
    }
}
