tests/policy.cluster.issuer.json
{
    "properties": {
      "displayName": "Kubernetes cluster pods and containers should only use allowed SELinux options",
      "policyType": "BuiltIn",
      "mode": "Microsoft.Kubernetes.Data",
      "description": "Pods and containers should only use allowed SELinux options in a Kubernetes cluster. This policy is generally available for Kubernetes Service (AKS), and preview for Azure Arc enabled Kubernetes. For more information, see https://aka.ms/kubepolicydoc.",
      "metadata": {
        "version": "7.1.1",
        "category": "Kubernetes"
      },
      "parameters": {
        "effect": {
          "type": "String",
          "metadata": {
            "displayName": "Effect",
            "description": "'Audit' allows a non-compliant resource to be created or updated, but flags it as non-compliant. 'Deny' blocks the non-compliant resource creation or update. 'Disabled' turns off the policy.",
            "portalReview": true
          },
          "allowedValues": [
            "audit",
            "Audit",
            "deny",
            "Deny",
            "disabled",
            "Disabled"
          ],
          "defaultValue": "Audit"
        },
        "excludedNamespaces": {
          "type": "Array",
          "metadata": {
            "displayName": "Namespace exclusions",
            "description": "List of Kubernetes namespaces to exclude from policy evaluation. System namespaces \"kube-system\", \"gatekeeper-system\" and \"azure-arc\" are always excluded by design. \"azure-extensions-usage-system\" is optional to remove."
          },
          "defaultValue": [
            "kube-system",
            "gatekeeper-system",
            "azure-arc",
            "azure-extensions-usage-system"
          ]
        },
        "namespaces": {
          "type": "Array",
          "metadata": {
            "displayName": "Namespace inclusions",
            "description": "List of Kubernetes namespaces to only include in policy evaluation. An empty list means the policy is applied to all resources in all namespaces."
          },
          "defaultValue": []
        },
        "labelSelector": {
          "type": "Object",
          "metadata": {
            "displayName": "Kubernetes label selector",
            "description": "Label query to select Kubernetes resources for policy evaluation. An empty label selector matches all Kubernetes resources."
          },
          "defaultValue": {},
          "schema": {
            "description": "A label selector is a label query over a set of resources. The result of matchLabels and matchExpressions are ANDed. An empty label selector matches all resources.",
            "type": "object",
            "properties": {
              "matchLabels": {
                "description": "matchLabels is a map of {key,value} pairs.",
                "type": "object",
                "additionalProperties": {
                  "type": "string"
                },
                "minProperties": 1
              },
              "matchExpressions": {
                "description": "matchExpressions is a list of values, a key, and an operator.",
                "type": "array",
                "items": {
                  "type": "object",
                  "properties": {
                    "key": {
                      "description": "key is the label key that the selector applies to.",
                      "type": "string"
                    },
                    "operator": {
                      "description": "operator represents a key's relationship to a set of values.",
                      "type": "string",
                      "enum": [
                        "In",
                        "NotIn",
                        "Exists",
                        "DoesNotExist"
                      ]
                    },
                    "values": {
                      "description": "values is an array of string values. If the operator is In or NotIn, the values array must be non-empty. If the operator is Exists or DoesNotExist, the values array must be empty.",
                      "type": "array",
                      "items": {
                        "type": "string"
                      }
                    }
                  },
                  "required": [
                    "key",
                    "operator"
                  ],
                  "additionalProperties": false
                },
                "minItems": 1
              }
            },
            "additionalProperties": false
          }
        },
        "allowedSELinuxOptions": {
          "type": "Object",
          "metadata": {
            "displayName": "Allowed SELinux options",
            "description": "The allowed configurations for pod and container level SELinux Options. Provide empty options list as input to block everything.",
            "portalReview": true
          },
          "defaultValue": {
            "options": []
          },
          "schema": {
            "type": "object",
            "properties": {
              "options": {
                "type": "array",
                "items": {
                  "type": "object",
                  "properties": {
                    "level": {
                      "type": "string"
                    },
                    "role": {
                      "type": "string"
                    },
                    "type": {
                      "type": "string"
                    },
                    "user": {
                      "type": "string"
                    }
                  },
                  "additionalProperties": false
                }
              }
            },
            "required": [
              "options"
            ],
            "additionalProperties": false
          }
        }
     
      },
      "policyRule": {
        "if": {
          "field": "type",
          "in": [
            "Microsoft.Kubernetes/connectedClusters",
            "Microsoft.ContainerService/managedClusters"
          ]
        },
        "then": {
          "effect": "[parameters('effect')]",
          "details": {
            "templateInfo": {
              "sourceType": "PublicURL",
              "url": "https://store.policy.core.windows.net/kubernetes/selinux/v2/template.yaml"
            },
            "apiGroups": [
              ""
            ],
            "kinds": [
              "Pod"
            ],
            "excludedNamespaces": "[parameters('excludedNamespaces')]",
            "namespaces": "[parameters('namespaces')]",
            "labelSelector": "[parameters('labelSelector')]",
            "values": {
              "allowedSELinuxOptions": "[parameters('allowedSELinuxOptions').options]",
              "excludedImages": "[parameters('excludedImages')]"
            }
          }
        }
      }
    },
    "id": "/providers/Microsoft.Authorization/policyDefinitions/e1e6c427-07d9-46ab-9689-bfa85431e636",
    "type": "Microsoft.Authorization/policyDefinitions",
    "name": "e1e6c427-07d9-46ab-9689-bfa85431e636"
  }
